@@ -74,6 +74,19 @@ check_lib_dir() {
   fi
 }
 
+jre_specific_vm_options() {
+  # java_ver is eg "18" for java 1.8, "90" for java 9.0, "100" for java 10.0.x
+  java_ver=$(java -version 2>&1 | sed -n -e 's/-ea/.0.0/i' -e 's/^.* version "\(.*\)\.\(.*\)\..*".*$/\1\2/p')
+  options=""
+
+  if [ "$java_ver" -ge 90 ] && [ "${APPNAME}" = "designer" ]
+  then # open internal module of javafx to reflection
+    options="--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED"
+  fi
+
+  echo $options
+}
+
 readonly APPNAME="${1}"
 if [ -z "${APPNAME}" ]; then
     usage
@@ -128,4 +141,5 @@ cygwin_paths
 
 java_heapsize_settings
 
-java ${HEAPSIZE} -cp "${classpath}" "${CLASSNAME}" "$@"
+java ${HEAPSIZE} $(jre_specific_vm_options) -cp "${classpath}" "${CLASSNAME}" "$@"
+
